flow_apps/troubleshooterFlow/force-app/main/default/objects/DiagnosticOutcome__c/fields/HomeDiagnosticNode__c.field-meta.xml
<CustomField>
    <fullName>HomeDiagnosticNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HomeDiagnosticNodeId</label>
    <referenceTo>DiagnosticNode__c</referenceTo>
    <relationshipLabel>DiagnosticOutcomes (HomeDiagnosticNode)</relationshipLabel>
    <relationshipName>DiagnosticOutcomes</relationshipName>
    <type>Lookup</type>
</CustomField>