flow_apps/troubleshooterFlow/force-app/main/default/objects/DiagnosticOutcome__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>