flow_apps/troubleshooterFlow/force-app/main/default/objects/DiagnosticOutcome__c/fields/TargetDiagnosticNode__c.field-meta.xml
<CustomField>
    <fullName>TargetDiagnosticNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Diagnostic Outcome is selected, the Flow will seek to transition the user to this Diagnostic Node.</description>
    <label>TargetDiagnosticNodeId</label>
    <referenceTo>DiagnosticNode__c</referenceTo>
    <relationshipLabel>DiagnosticOutcomes (TargetDiagnosticNode)</relationshipLabel>
    <relationshipName>TargetDiagnosticNode</relationshipName>
    <type>Lookup</type>
</CustomField>